tautulli/tautulli.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: tautulli
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8181
  selector:
    app: tautulli
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  namespace: tautulli
spec:
  selector:
    matchLabels:
      app: tautulli
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      containers:
      - name: tautulli
        image: tautulli/tautulli:v2.5.6
        readinessProbe:
          httpGet:
            path: /
            port: 8181
          timeoutSeconds: 15
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /
            port: 8181
          failureThreshold: 3
          timeoutSeconds: 15
          periodSeconds: 15
          initialDelaySeconds: 300
        ports:
        - containerPort: 8181
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: plex-logs
          mountPath: /plex-logs
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config
      - name: plex-logs
        persistentVolumeClaim:
          claimName: plex-logs
          readOnly: true
