tautulli/service-entries.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dippystreams-co-uk
  namespace: tautulli
spec:
  hosts:
  - dippystreams.co.uk
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api-github-com
  namespace: tautulli
spec:
  hosts:
  - api.github.com
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: plex-direct
  namespace: tautulli
spec:
  hosts:
  - "*.plex.direct"
  exportTo:
  - "."
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: tls
    protocol: TLS
  - number: 32400
    name: tls-plex
    protocol: TLS
